data/derived/sp14/progs/unify/prog3589.ml.out
Characters 19-30:
  let foo = List.map [incr;decr] 9;;
                     ^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b -> 'c
